third_party/move/move-bytecode-verifier/transactional-tests/tests/reference_safety/enum_borrow_field_invalid.exp
processed 2 tasks
task 0 lines 3-22:  publish [module 0xcafe1::enum_borrow]
Error: error: invalid variant for field selection of struct
   ┌─ test:15:5
   │
15 │     borrow_field Foo, x
   │     ^^^^^^^^^^^^^^^^^^^


task 1 lines 24-24:  run 0xcafe1::enum_borrow::borrow_field_fail --verbose
Error: Function execution failed with VMError: {
    message: Linker Error: Module 00000000000000000000000000000000000000000000000000000000000cafe1::enum_borrow doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
